# PCore_ECore_Check

./: CMakeLists.txt  README.md
PCore_ECore_Check/: CMakeLists.txt  PCore_ECore_Check.cpp  PCore_ECore_Check.h
isPrime/: CMakeLists.txt  isPrime.cpp  isPrime.h
